[gd_scene load_steps=5 format=3 uid="uid://jukb5rejusyn"]

[ext_resource type="Script" path="res://MINIGAMES/minijeu_thessaloniki/bacteria.gd" id="1_wm8fg"]
[ext_resource type="Texture2D" uid="uid://bqtn3afkyx6nd" path="res://MINIGAMES/minijeu_thessaloniki/figures/bac2.png" id="2_x46h5"]
[ext_resource type="Texture2D" uid="uid://bnyn6aerfwosp" path="res://MINIGAMES/minijeu_thessaloniki/figures/bac1.png" id="3_7oi3r"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s2jqn"]
radius = 57.0
height = 126.0

[node name="bacteria" type="Area2D"]
script = ExtResource("1_wm8fg")

[node name="bact2" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_x46h5")

[node name="Collision2" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_s2jqn")

[node name="bact1" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_7oi3r")

[node name="Collision1" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_s2jqn")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
